# auto_download_backup

./: README.md  pyproject.toml
auto_download_backup/: hooks.py  modules.txt
auto_download_backup/auto_download_backup/: api.py
auto_download_backup/auto_download_backup/doctype/auto_download_backup_setting/: auto_download_backup_setting.js  auto_download_backup_setting.json  auto_download_backup_setting.py  test_auto_download_backup_setting.py
